data/manifests/postgres/postgres-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: postgres-db-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - name: postgres-database
        image: docker-registry.cluster.local/licen_key_db:5.1.5
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-db-volume
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-db-volume
          persistentVolumeClaim:
            claimName: postgres-db-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: postgres-db-ns
spec:
  selector:
    app: postgres-db
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30003
    protocol: TCP
