data/manifests/postgres/postgres-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-db-ingress
  namespace: postgres-db-ns
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "4096m"
spec:
  ingressClassName: nginx
  rules:
  - host: postgres-database.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgres-db-sv
            port:
              number: 5432
